# ParCo2024-artifact

./: LICENSE  README.md  boxplot.R  code_compare.sh  collect.sh  collect_numbers.sh  compare.sh  compare_transformations.sh  extralarge-polybench-c-tbb.csv  extralarge-polybench-c.csv  generate_plots.sh  large-polybench-c-tbb.csv  large-polybench-c-tuned.csv  large-polybench-c.csv  medium-polybench-c-tbb.csv  medium-polybench-c-tuned.csv  medium-polybench-c.csv  more_visualizations.sh  parse_data.sh  plot-others.R  plot-polybench.R  plot-statistics.R  plot-tbb.R  plot.R  polybench-c-tuned.csv  polybench-gpu.csv  prepare-env.sh  run-examples.sh  run-measurements-CPU.sh  run-measurements-GPU.sh  run_algorithm.sh  run_c_algorithm.sh  run_noarr_algorithm.sh  sbatch_autotune.sh  transformations.md  validate-CPU.sh  validate-GPU.sh
PolyBenchGPU-Noarr/: CMakeLists.txt  build.sh  collect.sh  compare.sh  run_baseline_algorithm.sh  run_noarr_algorithm.sh
PolyBenchGPU-Noarr/CPP/: main.cpp
PolyBenchGPU-Noarr/CUDA/2DCONV/: 2DConvolution.cu
PolyBenchGPU-Noarr/CUDA/2MM/: 2mm.cu
PolyBenchGPU-Noarr/CUDA/GEMM/: gemm.cu
PolyBenchGPU-Noarr/CUDA/GRAMSCHM/: gramschmidt.cu
PolyBenchGPU-Noarr/CUDA/JACOBI2D/: jacobi2d.cu
PolyBenchGPU-Noarr/include/: common.hpp  defines.cuh
PolyBenchGPU/CUDA/: common.mk  compileCodes.sh
PolybenchC-Noarr/: CMakeLists.txt  build.sh  code_compare.sh  collect.sh  compare.sh  noarr.cpp  statistics.csv
PolybenchC-Noarr-omp/: CMakeLists.txt  build.sh  collect.sh  compare.sh  run_noarr_algorithm.sh
PolybenchC-Noarr-omp/datamining/covariance/: covariance.cpp
PolybenchC-Noarr-omp/linear-algebra/blas/syr2k/: syr2k.cpp
PolybenchC-Noarr-omp/linear-algebra/kernels/2mm/: 2mm.cpp
PolybenchC-Noarr-omp/stencils/heat-3d/: heat-3d.cpp
PolybenchC-Noarr-tbb/: CMakeLists.txt  build.sh  collect.sh  compare.sh  run_c_algorithm.sh  run_noarr_algorithm.sh
PolybenchC-Noarr-tbb/datamining/covariance/: covariance.cpp
PolybenchC-Noarr-tbb/include/: defines.hpp
PolybenchC-Noarr-tbb/linear-algebra/blas/syr2k/: syr2k.cpp
PolybenchC-Noarr-tbb/linear-algebra/kernels/2mm/: 2mm.cpp
PolybenchC-Noarr-tbb/stencils/heat-3d/: heat-3d.cpp
PolybenchC-Noarr-tuned/: CMakeLists.txt  collect.sh  compare.sh  run_c_algorithm.sh
PolybenchC-Noarr-tuned/datamining/covariance/: covariance.cpp
PolybenchC-Noarr-tuned/linear-algebra/blas/gemm/: gemm.cpp
PolybenchC-Noarr-tuned/linear-algebra/kernels/2mm/: 2mm.cpp
PolybenchC-Noarr-tuned/medley/floyd-warshall/: floyd-warshall.cpp
PolybenchC-Noarr-tuning/: CMakeLists.txt  autotune.sh  bs.md  build.sh  collect.sh  compare.sh  compare_compiles.sh  prepare_env.sh
PolybenchC-Noarr-tuning/datamining/covariance/: covariance.cpp
PolybenchC-Noarr-tuning/include/: defines.hpp  utility.hpp
PolybenchC-Noarr-tuning/linear-algebra/blas/gemm/: gemm.cpp
PolybenchC-Noarr-tuning/linear-algebra/blas/gemver/: gemver.cpp
PolybenchC-Noarr-tuning/linear-algebra/blas/gesummv/: gesummv.cpp
PolybenchC-Noarr-tuning/linear-algebra/blas/symm/: symm.cpp
PolybenchC-Noarr-tuning/linear-algebra/blas/syr2k/: syr2k.cpp
PolybenchC-Noarr-tuning/linear-algebra/blas/syrk/: syrk.cpp
PolybenchC-Noarr-tuning/linear-algebra/blas/trmm/: trmm.cpp
PolybenchC-Noarr-tuning/linear-algebra/kernels/2mm/: 2mm.cpp
PolybenchC-Noarr-tuning/linear-algebra/kernels/3mm/: 3mm.cpp
PolybenchC-Noarr-tuning/linear-algebra/kernels/atax/: atax.cpp
PolybenchC-Noarr-tuning/linear-algebra/kernels/bicg/: bicg.cpp
PolybenchC-Noarr-tuning/linear-algebra/kernels/doitgen/: doitgen.cpp
PolybenchC-Noarr-tuning/linear-algebra/kernels/mvt/: mvt.cpp
PolybenchC-Noarr-tuning/linear-algebra/solvers/cholesky/: cholesky.cpp
PolybenchC-Noarr-tuning/linear-algebra/solvers/gramschmidt/: gramschmidt.cpp
PolybenchC-Noarr-tuning/linear-algebra/solvers/lu/: lu.cpp
PolybenchC-Noarr-tuning/linear-algebra/solvers/ludcmp/: ludcmp.cpp
PolybenchC-Noarr-tuning/linear-algebra/solvers/trisolv/: trisolv.cpp
PolybenchC-Noarr-tuning/medley/deriche/: deriche.cpp
PolybenchC-Noarr-tuning/medley/floyd-warshall/: floyd-warshall.cpp
PolybenchC-Noarr-tuning/medley/nussinov/: nussinov.cpp
PolybenchC-Noarr-tuning/stencils/adi/: adi.cpp
PolybenchC-Noarr-tuning/stencils/fdtd-2d/: fdtd-2d.cpp
PolybenchC-Noarr-tuning/stencils/heat-3d/: heat-3d.cpp
PolybenchC-Noarr-tuning/stencils/jacobi-2d/: jacobi-2d.cpp
PolybenchC-Noarr-tuning/stencils/seidel-2d/: seidel-2d.cpp
PolybenchC-omp/: CMakeLists.txt
PolybenchC-omp/datamining/covariance/: covariance.c
PolybenchC-omp/linear-algebra/blas/syr2k/: syr2k.c
PolybenchC-omp/linear-algebra/kernels/2mm/: 2mm.c
PolybenchC-omp/stencils/heat-3d/: heat-3d.c
PolybenchC-pretune/: CMakeLists.txt
PolybenchC-tbb/: CMakeLists.txt
PolybenchC-tuned/: utilities
datamining/covariance/: covariance.cpp
results/: autotuning.csv  c.cpp  compare_compiles.csv  extralarge-polybench-c-omp.csv  extralarge-polybench-c-tbb.csv  extralarge-polybench-c-tuned.csv  extralarge-polybench-c.csv  large-polybench-c-omp.csv  large-polybench-c-tbb.csv  large-polybench-c-tuned.csv  large-polybench-c.csv  medium-polybench-c-omp.csv  medium-polybench-c-tbb.csv  medium-polybench-c-tuned.csv  medium-polybench-c.csv  noarr.cpp  polybench-c-omp.csv  polybench-c-tuned.csv  polybench-c.csv  polybench-gpu.csv  small-polybench-c-omp.csv  small-polybench-c-tbb.csv  small-polybench-c-tuned.csv  small-polybench-c.csv  statistics.csv
running-examples/: CMakeLists.txt  README.md  build.sh  histogram.cpp  histogram.cu  histomain.hpp  matmul.cpp  matmul_factored.cpp  matmulmain.hpp
scripts/: README.md  autotuning-test.sh  code_compare.sh  compare_transformations.sh  cyclo-analyze.awk  generate_plots.sh  halstead-analyze.awk  index-analyze.sh  loop_analyze.sh  more_visualizations.sh  parse_autotune_log.awk  parse_data.sh  plot-compiles.R  plot-others.R  plot-para.R  plot-polybench.R  plot-polybench.py  plot-statistics.R  plot-tbb.R  run-examples.sh  run-measurements-CPU.sh  run-measurements-GPU.sh  sanitize-CPU.sh  tok-analyze.awk  validate-CPU.sh  validate-GPU.sh  visualize-autotuning.sh
(+54 files in other folders)
